--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         <section class="flex">
             <div id="alone">1</div>
         </section>
+        <section>
+            <div class="dimensione_x">
+                <div></div>
+                <div></div>
+            </div>
+        </section>
     </main>
     
 </body>
