--- a/index.html
+++ b/index.html
@@ -28,9 +28,20 @@
             <div id="alone">1</div>
         </section>
         <section>
-            <div class="dimensione_x">
-                <div></div>
-                <div></div>
+            <div class="flex">
+                <div class="small_box"></div>
+                <div class="big_box"></div>
+            </div>
+        </section>
+        <section class="background_lightgrey">
+            <div class="flex">
+                <div class="big_box"></div>
+                <div class="small_box"></div>
+            </div>
+        </section><section>
+            <div class="flex">
+                <div class="small_box"></div>
+                <div class="big_box"></div>
             </div>
         </section>
     </main>
