--- a/index.html
+++ b/index.html
@@ -38,12 +38,16 @@
                 <div class="big_box"></div>
                 <div class="small_box"></div>
             </div>
-        </section><section>
+        </section>
+        <section>
             <div class="flex">
                 <div class="small_box"></div>
                 <div class="big_box"></div>
             </div>
         </section>
+        <section class="background_lightgrey flex">
+            <div class="green_box"></div>
+         </section>
     </main>
     
 </body>
