Correzioni margin auto

--- a/index.html
+++ b/index.html
@@ -9,44 +9,60 @@
 </head>
 <body>
     <header>
-        <div class="header_box flex">
-            <div class="header_sx_dx">Logo</div>
-            <div class="header_centrale">
-                <ul class="flex">
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
-                </ul>
+        <div class="container">
+            <div class="header_box flex">
+                <div class="header_sx_dx">
+                    Logo
+                </div>
+                <div class="header_centrale">
+                    <ul class="flex">
+                        <li>link</li>
+                        <li>link</li>
+                        <li>link</li>
+                        <li>link</li>
+                        <li>link</li>
+                    </ul>
+                </div>
+                <div class="header_sx_dx">
+                    Login
+                </div>
             </div>
-            <div class="header_sx_dx">Login</div>
         </div>
     </header>
     <main>
-        <section class="flex">
-            <div id="alone">1</div>
-        </section>
         <section>
-            <div class="flex">
-                <div class="small_box"></div>
-                <div class="big_box"></div>
-            </div>
-        </section>
-        <section class="background_lightgrey">
-            <div class="flex">
-                <div class="big_box"></div>
-                <div class="small_box"></div>
+            <div class="container flex center">
+                <div id="alone"></div>
             </div>
         </section>
         <section>
-            <div class="flex">
+            <div class=" container flex">
                 <div class="small_box"></div>
                 <div class="big_box"></div>
             </div>
         </section>
-        <section class="background_lightgrey flex">
-            <div class="green_box"></div>
+        <section class="bg_lightgrey">
+            <div class=" container flex">
+                <div class="big_box"></div>
+                <div class="small_box"></div>
+            </div>
+        </section>
+        <section>
+            <div class=" container flex">
+                <div class="small_box"></div>
+                <div class="big_box"></div>
+            </div>
+        </section>
+        <section class="bg_lightgrey">
+            <div class="container">
+                <div class="green_box"></div>
+         </section>
+         <section class="bg_black">
+             <div></div>
+             <div></div>
+             <div></div>
+             <div></div>
+             <div></div>
          </section>
     </main>
     
