--- a/index.html
+++ b/index.html
@@ -58,13 +58,19 @@
                 <div class="green_box"></div>
          </section>
          <section class="bg_black">
-             <div></div>
-             <div></div>
-             <div></div>
-             <div></div>
-             <div></div>
+            <div class="container flex">
+                <div class="big_column"></div>
+                <div class="small_column"></div>
+                <div class="small_column"></div>
+                <div class="small_column"></div>
+                <div class="small_column"></div>
+            </div>
          </section>
+        <section></section>
     </main>
+    <footer>
+        
+    </footer>
     
 </body>
 </html>
