--- a/index.html
+++ b/index.html
@@ -66,10 +66,15 @@
                 <div class="small_column"></div>
             </div>
          </section>
-        <section></section>
     </main>
-    <footer>
-        
+    <footer class="bg_black">
+        <div class="container flex">
+            <div>Logo</div>
+            <div>
+                <button>Bottone</button>
+            </div>
+        </div>
+
     </footer>
     
 </body>
